force-app/main/default/objects/User.object
<CustomObject>
    <fields>
        <fullName>Schools_List_Copy__c</fullName>
        <description>This field copies the value on the School__c field. We use this field for mapping with the school sites.</description>
        <formula>TEXT(School__c) &amp; &quot;;&quot;&amp;
IF ( INCLUDES ( School_Override_Field__c , &quot;Nanjing&quot; ), &quot;nanjing1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Marbella&quot; ), &quot;marbella1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Navarra&quot; ), &quot;navarra1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Tashkent&quot; ), &quot;tashkent1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;São Paulo&quot; ), &quot;saopaulo1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Kuala Lumpur&quot; ), &quot;kualalumpur1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Moscow&quot; ), &quot;moscow1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Manila&quot; ), &quot;manila1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Yangon&quot; ), &quot;yangon1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;New York&quot; ), &quot;newyork1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Brasilia&quot; ), &quot;brasilia1;&quot;,null ) &amp;
IF ( INCLUDES ( School_Override_Field__c , &quot;Group Site&quot; ), &quot;The British Schools Foundation;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Sandbox 1&quot; ), &quot;Sandbox 1;&quot;,null ) &amp; 
IF ( INCLUDES ( School_Override_Field__c , &quot;Sandbox 2&quot; ), &quot;Sandbox 2;&quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Sites</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Directory_Info_Add_nal_Notes_Text__c</fullName>
        <formula>IF(Staff_Directory_Info_Additional_Notes__c = &quot;&quot;, &quot;and did not request their name, job title or origin/nationality to be updated.&quot;, &quot;and provided the following additional notes: &quot;&amp;BR()&amp;Staff_Directory_Info_Additional_Notes__c&amp;BR()&amp;&quot;Please take the appropriate remedial action before continuing.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Directory Info Add&apos;nal Notes Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Directory_Info_Additional_Notes__c</fullName>
        <description>Captures any additional notes that are entered by the user on the staff directory information form</description>
        <label>Staff Directory Info Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Directory_Info_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staff Directory Info Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff_Directory_Notification_Email__c</fullName>
        <defaultValue>&quot;directory-notifications@britishschools.co.uk&quot;</defaultValue>
        <label>Staff Directory Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Start_Date_Next_Fiscal_Year__c</fullName>
        <formula>IF( 
   MONTH(TODAY()) &gt;= 8, 
   DATE(YEAR(TODAY())+1,08,01), 
   DATE(YEAR(TODAY()),08,01) 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Next Fiscal Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_This_Fiscal_Year__c</fullName>
        <formula>IF( 
   MONTH(TODAY()) &gt;= 8, 
   DATE(YEAR(TODAY()),08,01), 
   DATE(YEAR(TODAY())-1,08,01) 
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date This Fiscal Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Synced_Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>system field.</inlineHelpText>
        <label>Synced via Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Copy__c</fullName>
        <formula>Title</formula>
        <label>Title Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Chatter_Free_User_Created_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, triggers the relevant email alert to inform system admin that updates to the record need to be made, such as linking it to the relevant staff member record</description>
        <label>Trigger Chatter Free User Created Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPhotoLoader__User_Photo_Blob__c</fullName>
        <label>User Photo Blob</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>UserPhotoLoader__User_Photo_Content_Type__c</fullName>
        <defaultValue>&apos;image/jpg&apos;</defaultValue>
        <label>User Photo Content Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPhotoLoader__User_Photo_Name__c</fullName>
        <defaultValue>&apos;userPhoto.jpg&apos;</defaultValue>
        <label>User Photo Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPhotoLoader__User_Photo_URL__c</fullName>
        <label>User Photo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Cron_Link__c</fullName>
        <formula>/*CASE(
     TEXT(School__c), 
     &quot;The British School of Nanjing&quot;, &quot;https://bsn.org.cn/bsf/import/mo8n9VTRV65BB&quot;,
     &quot;The British International School of Marbella&quot;, &quot;https://bsm.org.es/bsf/import/mo8n9VTRV65BB&quot;,
     &quot;The British School of Navarra&quot;, &quot;https://bsn.org.es/bsf/import/mo8n9VTRV65BB&quot;,
     &quot;The British School of Tashkent&quot;, &quot;https://britishschool.uz/bsf/import/mo8n9VTRV65BB&quot;,
     &quot;The British College of Brazil&quot;, &quot;https://britishcollegebrazil.org/bsf/import/mo8n9VTRV65BB&quot;,
     &quot;The British School of Brasilia&quot;, &quot;https://britishschoolbrasilia.org/bsf/import/mo8n9VTRV65BB&quot;,
     &quot;The British International School of Kuala Lumpur&quot;, &quot;https://britishschool.edu.my/bsf/import/mo8n9VTRV65BB&quot;,
     &quot;The International School of Moscow&quot;, &quot;https://internationalschool.ru/bsf/import/mo8n9VTRV65BB&quot;,
     &quot;Nord Anglia International School Manila&quot;, &quot;https://kings.org.ph/bsf/import/mo8n9VTRV65BB&quot;,
     &quot;The British School Yangon&quot;, &quot;https://britishschoolyangon.org/bsf/import/mo8n9VTRV65BB&quot;,
     &quot;The New York International School&quot;, &quot;https://nyis.org/bsf/import/mo8n9VTRV65BB&quot;,
     &quot;&quot;
     )*/

&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Cron Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Has_Error__c</fullName>
        <description>A temporary field to identify inconsistencies with user information</description>
        <formula>OR(
   AND(
       Related_Account_ID__c != Portal_Account_Id__c, 
       Contact.RecordTypeId = &quot;0126F000001hVzi&quot;
       ), 
   AND(
       Contact.RecordTypeId = &quot;0126F000001hVzi&quot;, 
       Portal_Account_Id__c = null
       ), 
   Related_Account_ID__c = &quot;Invalid&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Group_Control_Tutor_Group_Default__c</fullName>
        <description>Used to define the &apos;Year Group Control&apos; value when a user creates a new tutor group</description>
        <formula>IF(Is_US_School_User__c = TRUE, &quot;Tutor Group US&quot;, &quot;Tutor Group UK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Group Control Tutor Group Default</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>backu__c</fullName>
        <formula>Parent_Has_Logged_In__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>backu</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Admissions_Officer_Profile</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Admissions Officer</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admissions Officer Profile</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>DEFAULT_CURRENCY</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>BSG_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>The British School of Guangzhou</value>
        </filters>
        <label>BSG Users</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Chatter_Free_Failed_Link_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>School__c</columns>
        <columns>Related_Contact_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Chatter Free User</value>
        </filters>
        <filters>
            <field>Trigger_Chatter_Free_User_Created_Email__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Related_Contact_ID__c</field>
            <operation>equals</operation>
        </filters>
        <label>Chatter Free Failed Link Users</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Chatter_Free_Users_TAs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Chatter Free User</value>
        </filters>
        <label>Chatter Free Users (TAs)</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Deletable</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Email_Domain_Extension__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>School Management</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>School Administration (Extended Access)</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>School Administration</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>School Directors</value>
        </filters>
        <label>Deletable</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>External_Translators</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>External Translator</value>
        </filters>
        <label>External Translators</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Headteachers</fullName>
        <booleanFilter>(1 OR 2 OR 3) AND (4 OR 5)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>equals</operation>
            <value>Headteacher</value>
        </filters>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>equals</operation>
            <value>Headmaster</value>
        </filters>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>equals</operation>
            <value>Principal</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Headteachers</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InactiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>KCB_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>King&apos;s College Beijing</value>
        </filters>
        <label>KCB Users</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MAE_Users</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>NAE</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>MAE Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_English_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>LANGUAGE</columns>
        <columns>School__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LANGUAGE</field>
            <operation>notEqual</operation>
            <value>1,2</value>
        </filters>
        <label>Non-English Users</label>
        <language>en_GB</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_in_Use_Parents</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>@notinuse.com</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>@notinuse.com</value>
        </filters>
        <label>Not-in-Use Parents</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>P2_Inactive_Parent_Portal_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>b</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>P2. Inactive Parent Portal Users</label>
        <sharedTo/>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Disallow_Change_of_School</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(School__c), 
    NOT(ISBLANK(PRIORVALUE(School__c))),
    $User.Id != &quot;0056F000008tfhZ&quot;
    )</errorConditionFormula>
        <errorMessage>You are not allowed to change the School of a user</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_Changes_via_Edit_Contact_Info</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!Synced_Apex__c, $Profile.Name = &quot;Parent Portal User - High Volume&quot;, OR(ISCHANGED(Email), ISCHANGED(FirstName), ISCHANGED(LastName), ISCHANGED(MobilePhone), ISCHANGED(Phone), ISCHANGED(Fax), ISCHANGED(Street), ISCHANGED(City), ISCHANGED(State), ISCHANGED(Country), ISCHANGED(PostalCode)))</errorConditionFormula>
        <errorMessage>You cannot edit your contact details on this page. Please use the &apos;My Contact Details&apos; tab or contact the school Administration Department.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_Changes_via_User_Page</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!Synced_Apex__c, ProfileId = &quot;00e6F0000020GEY&quot;, $Profile.Name &lt;&gt; &quot;System Administrator&quot;, $Profile.Name &lt;&gt; &quot;Parent Portal User - High Volume&quot;, OR(ISCHANGED(Email), ISCHANGED(FirstName), ISCHANGED(LastName), ISCHANGED(MobilePhone), ISCHANGED(Phone), ISCHANGED(Fax), ISCHANGED(Street), ISCHANGED(City), ISCHANGED(State), ISCHANGED(Country), ISCHANGED(PostalCode)))</errorConditionFormula>
        <errorMessage>One of the fields you have edited cannot be changed directly on this screen. Please make the relevant changes on the related contact record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_Invalid_Staff_Dir_Positioning</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Override_Manually__c = TRUE, OR(S_Dir_Positioning__c &lt; 1000, S_Dir_Positioning__c &gt; 9999))</errorConditionFormula>
        <errorMessage>If you are manually overriding the &apos;Positioning&apos; of this user&apos;s staff directory record then the value in the positioning field must contain 4 digits and be greater than or equal to 1000.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_Parent_User_Deactivation</fullName>
        <active>true</active>
        <description>Prevents anyone except sys admin from deactivating a parent user. Necessary to ensure all collaboration group memberships are deleted before a parent is deactivated so that if they&apos;re reactivated they don&apos;t end up as members of groups they shouldn&apos;t be in</description>
        <errorConditionFormula>AND( 
    ISCHANGED(IsActive),
    IsActive = FALSE,
    Profile.Id = &quot;00e6F0000020GEY&quot;,
    $Profile.Id != &quot;00e6F000001hU3F&quot;
    )</errorConditionFormula>
        <errorMessage>You do not have permission to deactivate a parent user. Please contact the system administrator for further assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dont_Allow_Academic_Department_Role</fullName>
        <active>true</active>
        <description>Prevents a user being created with a role of &apos;Academic Department&apos;</description>
        <errorConditionFormula>OR(CONTAINS(UserRole.Name, &apos;Academic Department&apos;), CONTAINS(UserRole.Name, &apos;Specialist/Subject Teacher&apos;))</errorConditionFormula>
        <errorMessage>Please select the appropriate role for the teacher. It cannot be &apos;Academic Department&apos; or contain &apos;Specialist/Subject Teacher&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Valid_Google_Drive_Photo_Link</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(Google_Drive_Photo_Link__c, &quot;britishschools.co.uk&quot;)</errorConditionFormula>
        <errorMessage>The photo URL you have entered is invalid. Please ensure you right click on the file and use the &apos;Get Shareable Link&apos; function or open the photo and copy the URL directly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Title_for_Staff_Profile</fullName>
        <active>true</active>
        <description>Requires that a title is entered when a new staff member user is created. Title will also be used in Staff Directory.</description>
        <errorConditionFormula>AND(Title = &quot;&quot;, Profile.Name &lt;&gt; &quot;Parent Portal User - High Volume&quot;, Profile.Name &lt;&gt; &quot;Chatter Free User&quot;, Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>You must enter a &apos;Title&apos; when creating a new Staff Member User.</errorMessage>
    </validationRules>
</CustomObject>